added data dir and gitignore

--- a/gpu-accelerated-pubmed-index.ipynb
+++ b/gpu-accelerated-pubmed-index.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Download and Process Data\n",
+    "## 1. Download and Process XML Data\n",
     "\n",
     "Here, I walked through the example with one Pubmed file, although you could repeat this process for every file in the directory. I explicitely chose a document that has newer abstracts. Make sure your computer has enough processing power to handle this part of the process."
    ]
@@ -63,8 +63,6 @@
    "source": [
     "from bs4 import BeautifulSoup\n",
     "\n",
-    "RAW_DATA = \"pubmed19n0972.xml\"\n",
-    "\n",
     "def parse_pubmed_xml(path, field):\n",
     "    with open(path, \"r\") as f:\n",
     "        text = f.read()\n",
@@ -77,13 +75,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "# soup.find_all(\"PubmedArticle\")[1]"
+    "RAW_DATA = \"pubmed19n0972.xml\"\n",
+    "\n",
+    "documents = parse_pubmed_xml(RAW_DATA)\n",
+    "print(documents[0])"
    ]
   },
   {
