new cpu bound section

--- a/gpu-accelerated-pubmed-index.ipynb
+++ b/gpu-accelerated-pubmed-index.ipynb
@@ -70,26 +70,20 @@
     "from bs4 import BeautifulSoup\n",
     "\n",
     "def get_file_text(path):\n",
-    "    \n",
     "    with open(path, \"r\") as f:\n",
     "        text = f.read()\n",
-    "        \n",
     "    return text\n",
     "\n",
     "def get_pubmed_articles_from_xml(text, field=\"PubmedArticle\"):\n",
-    "\n",
     "    soup = BeautifulSoup(text,\"xml\")\n",
     "    documents = soup.find_all(field)\n",
-    "    \n",
     "    return documents\n",
     "\n",
     "def get_pubmed_article_fields(soup, fields=[\"AbstractText\",\"Year\"]):\n",
     "    d = {}\n",
-    "    \n",
     "    for f in fields:\n",
     "        item = '' if soup.find(f) is None else soup.find(f).text\n",
     "        d[f] = item\n",
-    "    \n",
     "    return d"
    ]
   },
@@ -317,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Reading in Data in Accelerated Manner\n",
+    "## 1. GPU Accelerated Data Load and Processing\n",
     "\n",
     "The first thing we can do is read in the data using dask. The wildcard matching makes it super easy to read a ton of csv files in a directory utilizing all the GPUs on your system. To monitor these GPUs, use `watch -n 0.5 nvidia-smi` in another terminal."
    ]
@@ -435,7 +429,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. GPU Accelerated Information Retrieval"
+    "## 2. Basic Information Retreival \n",
+    "\n",
+    "As context for how to approach this problem, here is a basic, CPU bound information class using sklearn and TF-IDF. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import string\n",
+    "import sklearn.feature_extraction\n",
+    "from sklearn.metrics.pairwise import linear_kernel\n",
+    "\n",
+    "class PubmedTfidfTrainServe:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.vectorizer = None\n",
+    "        self.vectorizer_name = \"vectorizer.pickle\"\n",
+    "        self.lowercase = True\n",
+    "        self.text_data = None\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def preprocess_data(text):\n",
+    "        text = str(text).lower()\n",
+    "        text = text.translate(str.maketrans('', '', string.punctuation))\n",
+    "        return text.strip()\n",
+    "\n",
+    "    def load_data(self, path, column):\n",
+    "        df = pd.read_csv(path)\n",
+    "        self.text_data = df[\"Abstract\"]\n",
+    "        self.text_data = [self.preprocess_data(x) for x in self.text_data]\n",
+    "\n",
+    "    def train(self):\n",
+    "        self.vectorizer = sklearn.feature_extraction.text.TfidfVectorizer(lowercase=self.lowercase)  \n",
+    "        self.tfidf = self.vectorizer.fit_transform(self.text_data)\n",
+    "        self.save_model()\n",
+    "\n",
+    "    def save_model(self):\n",
+    "        pickle.dump(self.vectorizer, open(self.vectorizer_name, \"wb\"))\n",
+    "\n",
+    "    def load_model(self, model_path):\n",
+    "        self.vectorizer = pickle.load(open(model_path, \"rb\"))\n",
+    "\n",
+    "    def search(self, text, n_results=10):\n",
+    "\n",
+    "        if not self.vectorizer:\n",
+    "            self.load_model()\n",
+    "\n",
+    "        vector = self.vectorizer.transform([str(text)])\n",
+    "        cosine_similarities = linear_kernel(vector, self.tfidf).flatten()\n",
+    "        related_doc_indicies = cosine_similarities.argsort()[:-n_results:-1]\n",
+    "        return [self.text_data[i] for i in related_doc_indicies]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. GPU Accelerated Information Retrieval"
    ]
   },
   {
@@ -449,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +527,8 @@
       "Archive:  wwm_uncased_L-24_H-1024_A-16.zip\n",
       "   creating: wwm_uncased_L-24_H-1024_A-16/\n",
       "  inflating: wwm_uncased_L-24_H-1024_A-16/bert_model.ckpt.meta  \n",
-      "  inflating: wwm_uncased_L-24_H-1024_A-16/bert_model.ckpt.data-00000-of-00001  "
+      "  inflating: wwm_uncased_L-24_H-1024_A-16/bert_model.ckpt.data-00000-of-00001  \n",
+      "wwm_uncased_L-24_H-1024_A-16/bert_model.ckpt.data-00000-of-00001:  write error (disk full?).  Continue? (y/n/^C) ^C\n"
      ]
     }
    ],
@@ -481,6 +539,77 @@
     "!unzip wwm_uncased_L-24_H-1024_A-16.zip\n",
     "# start service with both GPUs available - do this another terminal\n",
     "# bert-serving-start -model_dir wwm_uncased_L-24_H-1024_A-16 -num_worker=2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cudf\n",
+    "import os\n",
+    "import time\n",
+    "import numpy as np\n",
+    "from numpy import savetxt\n",
+    "import faiss\n",
+    "import pickle\n",
+    "from bert_serving.client import BertClient\n",
+    "\n",
+    "DATA_PATH = '/data/'\n",
+    "d = 2014\n",
+    "bc = BertClient(check_length=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can use faiss to create the GPU accelerated index. Here, we first create a CPU index and then convert it to the GPU counterpart."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ngpus = faiss.get_num_gpus()\n",
+    "print(\"number of GPUs:\", ngpus)\n",
+    "cpu_index = faiss.IndexFlatL2(d)\n",
+    "gpu_index = faiss.index_cpu_to_all_gpus(  # build the index\n",
+    "  cpu_index\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, after all the touting of GPU parallelization and acceleration, I write a for loop and just process the content with brute force."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for f in os.listdir(DATA_PATH):\n",
+    "    ## read data\n",
+    "    df = cudf.read_csv(DATA_PATH+f)\n",
+    "    n_abstracts = len(df)\n",
+    "\n",
+    "    ## vectorize and index in two lines \n",
+    "    vectors = bc.encode(list(df['Abstract']))\n",
+    "    gpu_index.add(vectors.astype('float32'))\n",
+    "    print(\"Total vectors: \", gpu_index.ntotal)\n",
+    "    print(\"Total abstracts: \", len(text))\n",
+    "\n",
+    "    ## save index to disk if desired\n",
+    "    cpu_index = faiss.index_gpu_to_cpu(gpu_index)\n",
+    "    faiss.write_index(cpu_index,\"/data/vector.index\")\n",
+    "    print(\"Saved index to disk\")"
    ]
   },
   {
