cpu search info

--- a/gpu-accelerated-pubmed-index.ipynb
+++ b/gpu-accelerated-pubmed-index.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "## 0. Download and Process XML Data\n",
-    "This step gives you example data to work with for the tutorial. For the actual post, I worked with all of Pubmed. However, for the sake of brevity here I use the abstracts from a single file\n",
+    "This step gives you example data to work with for the tutorial. For the actual post, I worked with all of Pubmed. However, for the sake of brevity here I use the abstracts from a single file.\n",
     "\n",
     "Here, I walked through the example with one Pubmed file, although you could repeat this process for every file in the directory. I explicitely chose a document that has newer abstracts. Make sure your computer has enough processing power to handle this part of the process."
    ]
